--- a/src/app/pages/mensajes/mensajes.component.html
+++ b/src/app/pages/mensajes/mensajes.component.html
@@ -1,4 +1,6 @@
-<h1>USuarios: <small>xxxxx</small></h1>
+<h1>
+  USuarios: <small>{{ websocketService.usuario?.nombre }}</small>
+</h1>
 <hr />
 <div class="row">
   <div class="col-6">
