--- a/src/app/pages/mensajes/mensajes.component.html
+++ b/src/app/pages/mensajes/mensajes.component.html
@@ -1,6 +1,7 @@
 <h1>
   USuarios: <small>{{ websocketService.usuario?.nombre }}</small>
 </h1>
+<button type="button" (click)="salir()">Salir</button>
 <hr />
 <div class="row">
   <div class="col-6">
