--- a/src/app/components/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/components/lista-usuarios/lista-usuarios.component.html
@@ -1,1 +1,8 @@
-<p>lista-usuarios works!</p>
+<h1>Usuarios</h1>
+<hr />
+<ul class="list-group">
+  <li class="list-group-itrm" *ngFor="let usuario of usuariosActivos$ | async">
+    {{ usuario.nombre }} <span>{{ usuario.sala }}</span> <br />
+    <span>{{ usuario.id }}</span>
+  </li>
+</ul>
